--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -352,6 +352,8 @@ table{
   font-size: 110%;
   font-family: verdana;
   font-weight: bold;
+  padding-top: 1em;
+  padding-bottom: 1.2em;
 }
 
 .custom-menu .pure-menu-link:hover,
@@ -361,11 +363,7 @@ table{
   text-shadow: 0px 0px 4px #333333;
 }
 
-.custom-menu-top {
-  position: relative;
-  padding-top: .5em;
-  padding-bottom: .9em;
-}
+
 
 .custom-menu-brand {
   display: block;
@@ -487,3 +485,5 @@ table{
   }
 
 }
+
+/* Custom underline  */
