--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -9,7 +9,7 @@
 <body>
 
 	<div class="custom-menu-wrapper">
-	  <div class="pure-menu custom-menu custom-menu-top">
+	  <div class="pure-menu custom-menu">
 	    <a href="/" class="pure-menu-heading custom-menu-brand">Home</a>
 	    <a href="#" class="custom-menu-toggle" id="toggle"><s class="bar"></s><s class="bar"></s></a>
 	  </div>
