--- a/views/history.ejs
+++ b/views/history.ejs
@@ -43,7 +43,7 @@
   })(this, this.document);
   </script>
 
-<table id="videoTable" cellspacing="5" class="pure-table">
+<table id="videoTable" cellspacing="5" class="table">
 	<tr id="tableheader">
     <td class = "header-cell"> ID</td>
 	  <td class = "header-cell">Thumbnail</td>
