Fixed more sizing issues
Sizing on navbar still varies by 3px from logged in to not logged in.
Currently unsure about issue.

--- a/public/css/newstyle.css
+++ b/public/css/newstyle.css
@@ -344,8 +344,6 @@ table{
   width: auto;
   vertical-align: middle;
   -webkit-font-smoothing: antialiased;
-  padding-top: .4em;
-  padding-bottom: .4em;
 }
 
 .custom-menu .pure-menu-link,
@@ -369,6 +367,7 @@ table{
   display: block;
   text-align: center;
   position: relative;
+  font-weight:bold;
 }
 
 .custom-menu-toggle {
