--- a/views/about.ejs
+++ b/views/about.ejs
@@ -21,7 +21,7 @@
 	        <% } %>
 	        <li class="pure-menu-item"><a href="/history" class="pure-menu-link">View History</a></li>
 	        <li class="pure-menu-item"><a href="/logout" class="pure-menu-link">Logout</a></li>
-	        <li class="pure-menu-item"><a class="pure-menu-link"><p> Username: <%= user.username %> </p></a></li>
+	        <li class="pure-menu-item"><a class="custom-menu-brand"><p> Username: <%= user.username %> </p></a></li>
 	      <% } %>
 	      <%if (!user) { %>
 	        <li class="pure-menu-item"><a href="/login" class="pure-menu-link">Login</a></li>
